[package]
name = "palcrypto-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tiny.Twist <tiny.mahua@gmail.com>"]
description = "A crypto lib."
readme = "README.md"
homepage = "https://github.com/bambipig/palcrypto-rs"
repository = "https://github.com/bambipig/palcrypto-rs"
license = "MIT"
keywords = ["crypto"]

[dependencies]
anyhow = { version = "1.0.96" }
aes-gcm = { version = "0.10.3", features = ["alloc", "heapless"]}
crypto_box = { version = "0.9.1", features = ["chacha20"] }
crypto-common = { version = "0.1.6" }
